SERVER-29365 make no-op applyOps wait for majority writeConcern before returning